# Super_EGE

./: CMakeLists.txt  README.md
3party/SDL2.30.6/lib/msvc/: SDL2_test.lib  SDL2main.lib
3party/freetype2.13.3/lib/msvc/: freetype.lib
3party/glad/: readme.txt
3party/glad/include/glad/: glad.h
3party/glad/src/: glad.c
include/: super_ege.h
src/: Graphics.cpp  Graphics.h  Window.cpp  Window.h
test/: CMakeLists.txt  test.cpp
